RESOLVED FIXED297277
Fix Gamepad CoreIPC messages from being sent when flag is disabled
https://bugs.webkit.org/show_bug.cgi?id=297277
Summary Fix Gamepad CoreIPC messages from being sent when flag is disabled
Darryl
Reported 2025-08-12 10:16:06 PDT
Prevent Gamepad CoreIPC messages from being sent when the feature flag is disabled
Attachments
Radar WebKit Bug Importer
Comment 1 2025-08-12 10:17:45 PDT
Darryl
Comment 2 2025-08-12 10:22:06 PDT
EWS
Comment 3 2025-08-14 07:51:58 PDT
Committed 298680@main (5b287de62f0b): <https://commits.webkit.org/298680@main> Reviewed commits have been landed. Closing PR #49278 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.