Fix Gamepad CoreIPC messages from being sent when flag is disabled https://bugs.webkit.org/show_bug.cgi?id=297277 rdar://problem/158142493

Reviewed by Sihui Liu.

Add sender side validation to prevent Gamepad related IPC to be sent when the feature flag is disabled. This prevents crashes not the CoreIPC endpoints are protected with the feature flag.

* Source/WebCore/Modules/gamepad/GamepadManager.cpp:
(WebCore::GamepadManager::registerDOMWindow):
* Source/WebCore/Modules/gamepad/NavigatorGamepad.cpp:
(WebCore::NavigatorGamepad::NavigatorGamepad):

Canonical link: https://commits.webkit.org/298680@main